Fix overall base styling   * Font colors improved   * Replaced previous base font with Handlee       + Patrick Hand SC will be used for accents   * Background color changed to improve text visibility   * Added border to game description

--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -1,6 +1,7 @@
-$background-color: #0d93e4;
+$background-color: #1e2430;
 $font-color: #dfdfdf;
 $white: #fff;
 $grey: rgb(128, 128, 128);
 $teal: rgb(0, 156, 161);
 $black: #000;
+$red: #d75452;
